# nausicaa.rdvonline-checker

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
rdvonline-checker/: cli.py  mainMenu.py  rdvonline.py  rdvonline_web.py  resultScreen.py  web_scraping.py
scripts/: mainMenu.py  query.py  rdvonline.py  resultScreen.py  settings.py  web_scraping.py
