[metadata]
name = rdvonline_checker
version = 0.0.1
author = Nausicaa Consulting
license = GPL3
description = Try to get the best date on https://rendezvousonline.fr
keywords =
url =
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development
